# backend/openapi.json
@@ -478,7 +478,7 @@
         }
       }
     },
-    "/graph/{dsnpId}/following": {
+    "/graph/{msaId}/following": {
       "get": {
         "operationId": "userFollowing",
         "summary": "Get a list of users that a specific user follows",
@@ -489,7 +489,7 @@
         ],
         "parameters": [
           {
-            "name": "dsnpId",
+            "name": "msaId",
             "in": "path",
             "required": true,
             "schema": {
@@ -518,7 +518,7 @@
         }
       }
     },
-    "/graph/{dsnpId}/follow": {
+    "/graph/{msaId}/follow": {
       "post": {
         "operationId": "graphFollow",
         "summary": "Follow a user",
@@ -529,7 +529,7 @@
         ],
         "parameters": [
           {
-            "name": "dsnpId",
+            "name": "msaId",
             "in": "path",
             "required": true,
             "schema": {
@@ -547,7 +547,7 @@
         }
       }
     },
-    "/graph/{dsnpId}/unfollow": {
+    "/graph/{msaId}/unfollow": {
       "post": {
         "operationId": "graphUnfollow",
         "summary": "Unfollow a user",
@@ -558,7 +558,7 @@
         ],
         "parameters": [
           {
-            "name": "dsnpId",
+            "name": "msaId",
             "in": "path",
             "required": true,
             "schema": {
